Stop home page bouncing on mobile (#1940)

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -587,8 +587,8 @@ p {
   }
 
   .people-number {
-    font-size: 240px;
-    line-height: 240px;
+    font-size: 220px;
+    line-height: 220px;
     overflow: visible;
     top: 40px;
     position: relative;
